--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -7,18 +7,18 @@
       <section name="IhalematikProUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
-    <connectionStrings>
-      <!-- Feyzullah -->
-      <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />-->
-      <!-- Feyzullah -->
-      
-      <!-- Samet -->
-      <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
-      <!-- Samet -->
+  <connectionStrings>
+    <!-- Feyzullah -->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />
+    <!-- Feyzullah -->
+
+    <!-- Samet -->
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
+    <!-- Samet -->
   </connectionStrings>
   <appSettings>
     <add key="EnableCaching" value="True" />
-    
+
     <!--Email-->
     <add key="SmtpAdress" value="smtp.gmail.com" />
     <add key="SmtpPort" value="587" />
@@ -27,7 +27,7 @@
     <add key="SmtpMailSender" value="feyzullahgezici@gmail.com" />-->
     <add key="SmtpMailSenderDisplayName" value="Ihalematik - Development" />
   </appSettings>
-   <cachingConfiguration defaultCacheManager="CacheManager">
+  <cachingConfiguration defaultCacheManager="CacheManager">
     <cacheManagers>
       <add name="CacheManager" type="Microsoft.Practices.EnterpriseLibrary.Caching.CacheManager, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" expirationPollFrequencyInSeconds="60" maximumElementsInCacheBeforeScavenging="100000" numberToRemoveWhenScavenging="10" backingStoreName="NullBackingStore" />
     </cacheManagers>
