ufak bir düzeltme yapıldı

--- a/IhalematikLicance/App.config
+++ b/IhalematikLicance/App.config
@@ -9,11 +9,11 @@
   </configSections>
   <connectionStrings>
     <!-- Feyzullah -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient"/>
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient"/>-->
     <!-- Feyzullah -->
 
     <!-- Samet -->
-    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
     <!-- Samet -->
   </connectionStrings>
   <cachingConfiguration defaultCacheManager="CacheManager">
