--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -13,7 +13,7 @@
     <!-- Feyzullah -->
 
     <!-- Samet -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
     <!-- Samet -->
   </connectionStrings>
   <appSettings>
