LicenseAdmin projesi toparlandi ayri veritabanina baglandi

--- a/IhalematikLicenceAdmin/App.config
+++ b/IhalematikLicenceAdmin/App.config
@@ -4,16 +4,16 @@
     <section name="cachingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Caching.Configuration.CacheManagerSettings, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="IhalematikProUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="IhalematikLicenceAdmin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
     <!-- Feyzullah -->
-    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />-->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikLicense" providerName="System.Data.SqlClient" />
     <!-- Feyzullah -->
 
     <!-- Samet -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
     <!-- Samet -->
   </connectionStrings>
   <cachingConfiguration defaultCacheManager="CacheManager">
