--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -9,10 +9,10 @@
   </configSections>
   <connectionStrings>
     <!-- Feyzullah -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />-->
     <!-- Feyzullah -->
     <!-- Samet -->
-    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
     <!-- Samet -->
   </connectionStrings>
   <appSettings>
