--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Compile Include="Entity\Company.cs" />
     <Compile Include="Entity\License.cs" />
+    <Compile Include="Entity\Member.cs" />
     <Compile Include="Enum\WorkerTypesEnum.cs" />
     <Compile Include="Mailing\EmailData.cs" />
     <Compile Include="Mailing\EmailSetting.cs" />
@@ -160,6 +161,7 @@
     <Compile Include="Provider\CustomEntityBaseProvider.cs" />
     <Compile Include="Provider\LicenseProvider.cs" />
     <Compile Include="Provider\MaterialListProvider.cs" />
+    <Compile Include="Provider\MemberProvider.cs" />
     <Compile Include="Provider\OBFProvider.cs" />
     <Compile Include="Provider\OfferMaterialListProvider.cs" />
     <Compile Include="Provider\OfferProvider.cs" />
