--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -531,6 +531,7 @@
     </Compile>
     <Compile Include="Manager\CurrentManager.cs" />
     <Compile Include="Manager\RuleManager.cs" />
+    <Compile Include="Manager\UICustomConfigurationManager.cs" />
     <Compile Include="Manager\UIMaterialListManager.cs" />
     <Compile Include="Manager\UIOBFManager.cs" />
     <Compile Include="Manager\UIPozManager.cs" />
