ihale son adım yeniden tasarlandı nakliye formu eklendi

--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -277,6 +277,12 @@
     <Compile Include="Forms\IhaleAdim\frm_Iscilik.Designer.cs">
       <DependentUpon>frm_Iscilik.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\IhaleAdim\frm_Nakliye.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\IhaleAdim\frm_Nakliye.Designer.cs">
+      <DependentUpon>frm_Nakliye.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Ihale\frm_IhaleBilgisiDetay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -609,6 +615,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\IhaleAdim\frm_Iscilik.resx">
       <DependentUpon>frm_Iscilik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\IhaleAdim\frm_Nakliye.resx">
+      <DependentUpon>frm_Nakliye.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Ihale\frm_IhaleBilgisiDetay.resx">
       <DependentUpon>frm_IhaleBilgisiDetay.cs</DependentUpon>
