--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -265,6 +265,12 @@
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Genel\frm_yukleniyor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_yukleniyor.Designer.cs">
+      <DependentUpon>frm_yukleniyor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\IhaleAdim\frm_BirimFiyatHistory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -615,6 +621,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_yukleniyor.resx">
+      <DependentUpon>frm_yukleniyor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\IhaleAdim\frm_BirimFiyatHistory.resx">
       <DependentUpon>frm_BirimFiyatHistory.cs</DependentUpon>
