--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -1169,6 +1169,7 @@
   <ItemGroup>
     <Content Include="ico.ico" />
     <Content Include="icon.ico" />
+    <None Include="Resources\prg_logo1.JPG" />
     <None Include="Resources\life4.JPG" />
     <None Include="Resources\life2.JPG" />
     <None Include="Resources\life3.JPG" />
