--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -1175,6 +1175,9 @@
     <None Include="Resources\life3.JPG" />
     <None Include="Resources\ihale_demo.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="EmailFile\Images\Logo\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
