--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -259,6 +259,12 @@
     <Compile Include="Forms\Genel\frm_LoginGuncelle.Designer.cs">
       <DependentUpon>frm_LoginGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Genel\frm_LogoAyarları.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_LogoAyarları.Designer.cs">
+      <DependentUpon>frm_LogoAyarları.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -618,6 +624,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_LoginGuncelle.resx">
       <DependentUpon>frm_LoginGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_LogoAyarları.resx">
+      <DependentUpon>frm_LogoAyarları.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
