--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -481,6 +481,12 @@
     <Compile Include="Forms\Tedarikci\frm_TeklifAktar.Designer.cs">
       <DependentUpon>frm_TeklifAktar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tedarikci\frm_TeklifDetayFirma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_TeklifDetayFirma.Designer.cs">
+      <DependentUpon>frm_TeklifDetayFirma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tedarikci\frm_TeklifListesi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -741,6 +747,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_TeklifAktar.resx">
       <DependentUpon>frm_TeklifAktar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_TeklifDetayFirma.resx">
+      <DependentUpon>frm_TeklifDetayFirma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_TeklifListesi.resx">
       <DependentUpon>frm_TeklifListesi.cs</DependentUpon>
