--- a/IhalematikLicenceAdmin/App.config
+++ b/IhalematikLicenceAdmin/App.config
@@ -9,11 +9,11 @@
   </configSections>
   <connectionStrings>
     <!-- Feyzullah -->
-    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikLicense" providerName="System.Data.SqlClient" />-->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikLicense" providerName="System.Data.SqlClient" />
     <!-- Feyzullah -->
 
     <!-- Samet -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikLicense; Integrated Security=true" providerName="System.Data.SqlClient" />
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikLicense; Integrated Security=true" providerName="System.Data.SqlClient" />-->
     <!-- Samet -->
   </connectionStrings>
   <cachingConfiguration defaultCacheManager="CacheManager">
