--- a/IhalematikLicenceAdmin/IhalematikLicenceAdmin.csproj
+++ b/IhalematikLicenceAdmin/IhalematikLicenceAdmin.csproj
@@ -126,24 +126,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminAnaform.cs">
+    <Compile Include="Form\AdminAnaform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminAnaform.Designer.cs">
+    <Compile Include="Form\AdminAnaform.Designer.cs">
       <DependentUpon>AdminAnaform.cs</DependentUpon>
     </Compile>
-    <Compile Include="MusteriOlustur.cs">
+    <Compile Include="Form\MusteriOlustur.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MusteriOlustur.Designer.cs">
+    <Compile Include="Form\MusteriOlustur.Designer.cs">
       <DependentUpon>MusteriOlustur.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AdminAnaform.resx">
+    <EmbeddedResource Include="Form\AdminAnaform.resx">
       <DependentUpon>AdminAnaform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MusteriOlustur.resx">
+    <EmbeddedResource Include="Form\MusteriOlustur.resx">
       <DependentUpon>MusteriOlustur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
