--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -583,7 +583,7 @@
       <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\CurrentManager.cs" />
-    <Compile Include="Manager\RuleManager.cs" />
+    <Compile Include="Manager\UIRuleManager.cs" />
     <Compile Include="Manager\UICustomConfigurationManager.cs" />
     <Compile Include="Manager\UIGlobalVeriables.cs" />
     <Compile Include="Manager\UIMaterialListManager.cs" />
