mail listesi formuna detail button ve formu eklendi

--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -426,11 +426,17 @@
     <Compile Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.Designer.cs">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Tedarikci\frm_KarsilastirmadaSecilenFirmaUrunListesi.cs">
+    <Compile Include="Forms\Tedarikci\frm_TedarikcilereMailleGonderilenMalzemeDetayi.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Tedarikci\frm_KarsilastirmadaSecilenFirmaUrunListesi.Designer.cs">
-      <DependentUpon>frm_KarsilastirmadaSecilenFirmaUrunListesi.cs</DependentUpon>
+    <Compile Include="Forms\Tedarikci\frm_TedarikcilereMailleGonderilenMalzemeDetayi.Designer.cs">
+      <DependentUpon>frm_TedarikcilereMailleGonderilenMalzemeDetayi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_KarsilastirmaListesi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_KarsilastirmaListesi.Designer.cs">
+      <DependentUpon>frm_KarsilastirmaListesi.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Tedarikci\frm_MailListesi.cs">
       <SubType>Form</SubType>
@@ -755,8 +761,11 @@
     <EmbeddedResource Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.resx">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Tedarikci\frm_KarsilastirmadaSecilenFirmaUrunListesi.resx">
-      <DependentUpon>frm_KarsilastirmadaSecilenFirmaUrunListesi.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_TedarikcilereMailleGonderilenMalzemeDetayi.resx">
+      <DependentUpon>frm_TedarikcilereMailleGonderilenMalzemeDetayi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_KarsilastirmaListesi.resx">
+      <DependentUpon>frm_KarsilastirmaListesi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_MailListesi.resx">
       <DependentUpon>frm_MailListesi.cs</DependentUpon>
