1- Raporlar menüsünden pasif edilen bir teklif ihale oluşturdaki gridde görüntüleniyor 2- teklif listelerinde teklif tarihleri gridde listelenmiyor

--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -9,10 +9,10 @@
   </configSections>
   <connectionStrings>
     <!-- Feyzullah -->
-    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />
+    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />-->
     <!-- Feyzullah -->
     <!-- Samet -->
-    <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
+    <add name="Stonefish.Sabre.MSSQL" connectionString="server=.;user id=sa;password=Stonefish1;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
     <!-- Samet -->
   </connectionStrings>
   <appSettings>
@@ -20,8 +20,8 @@
     <!--Email-->
     <add key="SmtpAdress" value="smtp.gmail.com" />
     <add key="SmtpPort" value="587" />
-    <add key="Mode" value="DEVELOPMENT" />
-    <!--<add key="Mode" value="PRODUCTION" />-->
+    <!--<add key="Mode" value="DEVELOPMENT" />-->
+    <add key="Mode" value="PRODUCTION" />
     <!--<add key="SmtpUserName" value="feyzullahgezici" />
     <add key="SmtpPassword" value="FG!Selcuk!86" />
     <add key="SmtpMailSender" value="feyzullahgezici@gmail.com" />-->
