--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -276,6 +276,12 @@
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Poz\frm_TopluPozYukle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Poz\frm_TopluPozYukle.Designer.cs">
+      <DependentUpon>frm_TopluPozYukle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Genel\frm_yukleniyor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -685,6 +691,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Poz\frm_TopluPozYukle.resx">
+      <DependentUpon>frm_TopluPozYukle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_yukleniyor.resx">
       <DependentUpon>frm_yukleniyor.cs</DependentUpon>
