--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -276,6 +276,18 @@
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\OBF\frm_TopluObfTemp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OBF\frm_TopluObfTemp.Designer.cs">
+      <DependentUpon>frm_TopluObfTemp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Poz\frm_TopluPozTemp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Poz\frm_TopluPozTemp.Designer.cs">
+      <DependentUpon>frm_TopluPozTemp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Poz\frm_TopluPozYukle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -691,6 +703,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OBF\frm_TopluObfTemp.resx">
+      <DependentUpon>frm_TopluObfTemp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Poz\frm_TopluPozTemp.resx">
+      <DependentUpon>frm_TopluPozTemp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Poz\frm_TopluPozYukle.resx">
       <DependentUpon>frm_TopluPozYukle.cs</DependentUpon>
