--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Company.cs" />
+    <Compile Include="Entity\ErrorLog.cs" />
     <Compile Include="Entity\License.cs" />
     <Compile Include="Entity\Member.cs" />
     <Compile Include="Entity\OtherExpenses.cs" />
@@ -155,12 +156,14 @@
     <Compile Include="Manager\CustomConfigurationManager.cs" />
     <Compile Include="Manager\CustomDBConnectionManager.cs" />
     <Compile Include="Mailing\MailingManager.cs" />
+    <Compile Include="Manager\LoggingManager.cs" />
     <Compile Include="Manager\OfferManager.cs" />
     <Compile Include="Manager\RuleManager.cs" />
     <Compile Include="Manager\TenderManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\CompanyProvider.cs" />
     <Compile Include="Provider\CustomEntityBaseProvider.cs" />
+    <Compile Include="Provider\ErrorLogProvider.cs" />
     <Compile Include="Provider\LicenseProvider.cs" />
     <Compile Include="Provider\MaterialListProvider.cs" />
     <Compile Include="Provider\MemberProvider.cs" />
