--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -282,6 +282,12 @@
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Genel\frm_wait.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_wait.Designer.cs">
+      <DependentUpon>frm_wait.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\OBF\frm_TopluObfTemp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -299,12 +305,6 @@
     </Compile>
     <Compile Include="Forms\Poz\frm_TopluPozYukle.Designer.cs">
       <DependentUpon>frm_TopluPozYukle.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\Genel\frm_yukleniyor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\Genel\frm_yukleniyor.Designer.cs">
-      <DependentUpon>frm_yukleniyor.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\IhaleAdim\frm_BirimFiyatHistory.cs">
       <SubType>Form</SubType>
@@ -594,11 +594,11 @@
     <Compile Include="Forms\IhaleAdim\frm_Teklif_Adim3.Designer.cs">
       <DependentUpon>frm_Teklif_Adim3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Genel\frm_wait.cs">
+    <Compile Include="Forms\Genel\frm_mailWait.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Genel\frm_wait.Designer.cs">
-      <DependentUpon>frm_wait.cs</DependentUpon>
+    <Compile Include="Forms\Genel\frm_mailWait.Designer.cs">
+      <DependentUpon>frm_mailWait.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\IhaleAdim\frm_YeniIhaleYarat.cs">
       <SubType>Form</SubType>
@@ -714,6 +714,9 @@
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_wait.resx">
+      <DependentUpon>frm_wait.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\OBF\frm_TopluObfTemp.resx">
       <DependentUpon>frm_TopluObfTemp.cs</DependentUpon>
     </EmbeddedResource>
@@ -722,9 +725,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Poz\frm_TopluPozYukle.resx">
       <DependentUpon>frm_TopluPozYukle.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Genel\frm_yukleniyor.resx">
-      <DependentUpon>frm_yukleniyor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\IhaleAdim\frm_BirimFiyatHistory.resx">
       <DependentUpon>frm_BirimFiyatHistory.cs</DependentUpon>
@@ -870,8 +870,8 @@
     <EmbeddedResource Include="Forms\IhaleAdim\frm_Teklif_Adim3.resx">
       <DependentUpon>frm_Teklif_Adim3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Genel\frm_wait.resx">
-      <DependentUpon>frm_wait.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Genel\frm_mailWait.resx">
+      <DependentUpon>frm_mailWait.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\IhaleAdim\frm_YeniIhaleYarat.resx">
       <DependentUpon>frm_YeniIhaleYarat.cs</DependentUpon>
