--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -1299,6 +1299,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EmailFile\Images\Logo\" />
+    <Folder Include="Hakedis\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
